<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity5">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="wrap_content"
		android:layout_height="150dp"
		android:layout_gravity="center"
		android:src="@drawable/string"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Type a message"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:fontFamily="sans-serif-light"
		app:layout_constraintTop_toBottomOf="@+id/imageView2" />

	<RelativeLayout
		android:id="@+id/relativeLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintTop_toBottomOf="@+id/textView8">

		<Button
			android:id="@+id/btn5_1"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_below="@id/RG"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="18dp"
			android:background="#B4D3FF"
			android:text="@string/btn5_1"
			android:fontFamily="sans-serif-light"/>

		<Button
			android:id="@+id/btn5_2"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/btn5_1"
			android:layout_alignBottom="@id/btn5_1"
			android:layout_alignParentEnd="true"
			android:layout_marginRight="20dp"
			android:background="#B4D3FF"
			android:text="@string/btn5_2"
			android:fontFamily="sans-serif-light"/>


		<EditText
			android:id="@+id/EdText"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/RG"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="false"
			android:hint="@string/EditTextHint"
			android:fontFamily="sans-serif-light"/>

		<RadioGroup
			android:id="@+id/RG"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<RadioButton
				android:id="@+id/RB_1"
				android:layout_width="144dp"
				android:layout_height="wrap_content"
				android:layout_gravity="top|left"
				android:checked="true"
				android:text="@string/RB_1"
				android:fontFamily="sans-serif-light"/>

			<RadioButton
				android:id="@+id/RB_2"
				android:layout_width="144dp"
				android:layout_height="wrap_content"
				android:layout_below="@+id/RB_1"
				android:layout_gravity="left"
				android:text="@string/RB_2"
				android:fontFamily="sans-serif-light"/>

			<RadioButton
				android:id="@+id/RB_3"
				android:layout_width="144dp"
				android:layout_height="wrap_content"
				android:layout_below="@+id/RB_2"
				android:layout_gravity="left"
				android:text="@string/RB_3"
				android:fontFamily="sans-serif-light"/>
		</RadioGroup>
	</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>