<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity7">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="wrap_content"
		android:layout_height="150dp"
		android:layout_gravity="center"
		android:src="@drawable/string"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />


	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="153dp"
		android:layout_marginTop="20dp"
		app:layout_constraintTop_toBottomOf="@+id/imageView2">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center|right"
				android:layout_marginRight="10px"
				android:layout_weight="0.3"
				android:text="@string/Label_7"
				android:fontFamily="sans-serif-light"/>

			<EditText
				android:id="@+id/label"
				android:layout_weight="0.7" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center|right"
				android:layout_marginRight="10px"
				android:layout_weight="0.3"
				android:text="@string/Label_7_2"
				android:fontFamily="sans-serif-light"/>

			<EditText
				android:id="@+id/url"
				android:layout_weight="0.7" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/btn_ok"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="20px"
				android:layout_weight="0.5"
				android:background="#B4D3FF"
				android:text="@string/btn7_1"
				android:fontFamily="sans-serif-light"/>

			<Button
				android:id="@+id/btn_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="20px"
				android:layout_weight="0.5"
				android:background="#B4D3FF"
				android:text="@string/btn7_2"
				android:fontFamily="sans-serif-light"/>
		</TableRow>

	</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>